# mcp-passport

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  action.yml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml
src/: crossfile.rs  finding.rs  lib.rs  main.rs  report.rs  rules.rs  sarif.rs
tests/: crossfile_fs.rs  name_semver.rs  packages.rs  sarif_report.rs  structural.rs  validate_e2e.rs
